--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
                 <h1>مصر المستقبل</h1>
             </a>
             <ul class="nav">
-                <li><a href="#">الطريق للتغير</a></li>
-                <li><a href="#" dir="ltr">العاصمة الأدارية الجديدة</a></li>
-                <li><a href="#" dir="ltr">مدينة العلمين الجديدة</a></li>
-                <li><a href="#" dir="ltr">حقل ظهر</a></li>
-                <li><a href="#" dir="ltr">قناة السويس الجديدة</a></li>
+                <li><a href="#way_to_change">الطريق للتغير</a></li>
+                <li><a href="#suez_canal_tunnels">أنفاق قناة السويس</a></li>
+                <li><a href="#new_administrative_capital" dir="ltr">العاصمة الأدارية الجديدة</a></li>
+                <li><a href="#new_alamein_city" dir="ltr">مدينة العلمين الجديدة</a></li>
+                <li><a href="#zohr_field" dir="ltr">حقل ظهر</a></li>
+                <li><a href="#new_suez_canal" dir="ltr">قناة السويس الجديدة</a></li>
             </ul>
         </div>
     </header>
@@ -44,7 +45,7 @@
             </div>
         </section>
 
-        <section id="way_to_change">
+        <section id="suez_canal_tunnels">
             <div class="container">
                 <div class="text">
                     <h1>أنفاق قناة السويس</h1>
@@ -64,7 +65,7 @@
             </div>
         </section>
 
-        <section id="way_to_change">
+        <section id="new_administrative_capital">
             <div class="container">
                 <div class="text">
                     <h1>العاصمة الأدارية الجديدة</h1>
@@ -86,7 +87,7 @@
             </div>
         </section>
 
-        <section id="way_to_change">
+        <section id="new_alamein_city">
             <div class="container">
                 <div class="text">
                     <h1>مدينة العلمين الجديدة</h1>
@@ -110,7 +111,7 @@
             </div>
         </section>
 
-        <section id="way_to_change">
+        <section id="zohr_field">
             <div class="container">
                 <div class="text">
                     <h1>حقل ظهر</h1>
@@ -134,7 +135,7 @@
             </div>
         </section>
 
-        <section id="way_to_change">
+        <section id="new_suez_canal">
             <div class="container">
                 <div class="text">
                     <h1>قناة السويس الجديدة</h1>
