--- a/about_developer.html
+++ b/about_developer.html
@@ -22,13 +22,21 @@
             <div class="container">
                 <div class="text">
                     <h1>عن <span>عمر البدويهي</span> 👨‍💻</h1>
-                    <p>مطور مواقع يتمتع بخبرة ثلاث سنوات في تطوير الويب، حيث يعمل على كل من الواجهة الأمامية (Front-End) والواجهة الخلفية (Back-End)، مما يجعله مطور Full-Stack قادرًا على بناء مواقع وتطبيقات ويب متكاملة.</p>
+                    <p>مطور مواقع يتمتع بخبرة ثلاث سنوات في تطوير الويب، حيث يعمل على كل من الواجهة الأمامية (Front-End)
+                        والواجهة الخلفية (Back-End)، مما يجعله مطور Full-Stack قادرًا على بناء مواقع وتطبيقات ويب
+                        متكاملة.</p>
                     <h2>مهاراته التقنية:</h2>
                     <ul>
-                        <li><b>Front-End Development:</b> يمتلك خبرة واسعة في تطوير الواجهات الأمامية باستخدام HTML، CSS، وJavaScript، مما يمكنه من تصميم صفحات ويب متجاوبة وجذابة تتماشى مع أفضل ممارسات تجربة المستخدم (UX) وتجربة الواجهة (UI).</li>
-                        <li><b>Back-End Development:</b> لديه خبرة قوية في تطوير الواجهات الخلفية باستخدام PHP وNode.js، مما يمكنه من إنشاء أنظمة ديناميكية وقواعد بيانات متصلة بالمواقع، مع القدرة على التعامل مع السيرفرات وإدارة البيانات بكفاءة.</li>
-                        <li><b>إدارة قواعد البيانات:</b> يمكنه التعامل مع قواعد بيانات مختلفة مثل MySQL وMongoDB، مما يساعد في بناء أنظمة قوية تعتمد على إدارة البيانات بشكل سلس وفعال.</li>
-                        <li><b>تطوير التطبيقات الديناميكية:</b> بفضل معرفته بـ JavaScript وNode.js، يمكنه تطوير تطبيقات ويب تفاعلية تعمل بسلاسة مع المستخدمين وتوفر أداءً عاليًا.</li>
+                        <li><b>Front-End Development:</b> يمتلك خبرة واسعة في تطوير الواجهات الأمامية باستخدام HTML،
+                            CSS، وJavaScript، مما يمكنه من تصميم صفحات ويب متجاوبة وجذابة تتماشى مع أفضل ممارسات تجربة
+                            المستخدم (UX) وتجربة الواجهة (UI).</li>
+                        <li><b>Back-End Development:</b> لديه خبرة قوية في تطوير الواجهات الخلفية باستخدام PHP وNode.js،
+                            مما يمكنه من إنشاء أنظمة ديناميكية وقواعد بيانات متصلة بالمواقع، مع القدرة على التعامل مع
+                            السيرفرات وإدارة البيانات بكفاءة.</li>
+                        <li><b>إدارة قواعد البيانات:</b> يمكنه التعامل مع قواعد بيانات مختلفة مثل MySQL وMongoDB، مما
+                            يساعد في بناء أنظمة قوية تعتمد على إدارة البيانات بشكل سلس وفعال.</li>
+                        <li><b>تطوير التطبيقات الديناميكية:</b> بفضل معرفته بـ JavaScript وNode.js، يمكنه تطوير تطبيقات
+                            ويب تفاعلية تعمل بسلاسة مع المستخدمين وتوفر أداءً عاليًا.</li>
                     </ul>
                     <div class="certificates">
                         <div><img src="./imgs/responsive_certif.png" alt=""></div>
@@ -43,15 +51,38 @@
     <footer>
         <div class="container">
             <h3>تمت التطوير بواسطة / <a href="./about_developer.html">عمر هاني البدويهي</a></h1>
-            <p>جميع الحقوق محفوظة لمسابقة نعم نسنطيع بوزارة التربية و التعليم 2024/2025</p>
+                <p>جميع الحقوق محفوظة لمسابقة نعم نسنطيع بوزارة التربية و التعليم 2024/2025</p>
         </div>
     </footer>
 
     <div class="img_model">
-        <div id="close"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" width="30px" height="30px"><path d="M 9.15625 6.3125 L 6.3125 9.15625 L 22.15625 25 L 6.21875 40.96875 L 9.03125 43.78125 L 25 27.84375 L 40.9375 43.78125 L 43.78125 40.9375 L 27.84375 25 L 43.6875 9.15625 L 40.84375 6.3125 L 25 22.15625 Z"/></svg></div>
+        <div id="close"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" width="30px" height="30px">
+                <path
+                    d="M 9.15625 6.3125 L 6.3125 9.15625 L 22.15625 25 L 6.21875 40.96875 L 9.03125 43.78125 L 25 27.84375 L 40.9375 43.78125 L 43.78125 40.9375 L 27.84375 25 L 43.6875 9.15625 L 40.84375 6.3125 L 25 22.15625 Z" />
+            </svg></div>
         <img src="" alt="">
     </div>
-    <script src="./main.js"></script>
+    <script>
+        const img_model = document.querySelector(".img_model")
+        const model_img = document.querySelector(".img_model img")
+
+        document.querySelectorAll(".personal .certificates img").forEach(img => {
+            img.addEventListener("click", () => {
+                img_model.querySelector("img").src = img.src;
+                img_model.classList.add("active")
+            })
+        })
+
+        img_model.querySelector("#close").addEventListener("click", () => {
+            img_model.classList.remove("active")
+        })
+
+        img_model.addEventListener("click", (e) => {
+            if (event.target !== img_model.querySelector("img")) {
+                img_model.classList.remove("active");
+            }
+        });
+    </script>
 </body>
 
 </html>
