--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <img src="./imgs/egypt_flag.webp" alt="">
                 <h1>مصر المستقبل</h1>
             </a>
-            <ul class="nav">
+            <ul class="nav desk_nav">
                 <li><a href="#way_to_change">الطريق للتغير</a></li>
                 <li><a href="#suez_canal_tunnels">أنفاق قناة السويس</a></li>
                 <li><a href="#new_administrative_capital" dir="ltr">العاصمة الأدارية الجديدة</a></li>
@@ -23,6 +23,27 @@
                 <li><a href="#zohr_field" dir="ltr">حقل ظهر</a></li>
                 <li><a href="#new_suez_canal" dir="ltr">قناة السويس الجديدة</a></li>
             </ul>
+            <div id="burger_menu">
+                <svg xmlns="http://www.w3.org/2000/svg" width="35px" height="35px" viewBox="0 0 24 24" fill="none">
+                    <path d="M4 18L20 18" stroke="#000000" stroke-width="2" stroke-linecap="round" />
+                    <path d="M4 12L20 12" stroke="#000000" stroke-width="2" stroke-linecap="round" />
+                    <path d="M4 6L20 6" stroke="#000000" stroke-width="2" stroke-linecap="round" />
+                </svg>
+            </div>
+            <div class="mobile_menu" id="mobile_menu">
+                <a href="#" class="title">
+                    <img src="./imgs/egypt_flag.webp" alt="">
+                    <h4>مصر المستقبل</h4>
+                </a>
+                <ul class="nav">
+                    <li><a href="#way_to_change">الطريق للتغير</a></li>
+                    <li><a href="#suez_canal_tunnels">أنفاق قناة السويس</a></li>
+                    <li><a href="#new_administrative_capital" dir="ltr">العاصمة الأدارية الجديدة</a></li>
+                    <li><a href="#new_alamein_city" dir="ltr">مدينة العلمين الجديدة</a></li>
+                    <li><a href="#zohr_field" dir="ltr">حقل ظهر</a></li>
+                    <li><a href="#new_suez_canal" dir="ltr">قناة السويس الجديدة</a></li>
+                </ul>
+            </div>
         </div>
     </header>
     <main>
@@ -139,21 +160,21 @@
             <div class="container">
                 <div class="text">
                     <h1>قناة السويس الجديدة</h1>
-                        <p>
-                            قناة السويس الجديدة هي إنجاز استراتيجي يعزز مكانة مصر كمركز عالمي للتجارة، حيث تم تنفيذ
-                            المشروع في عام واحد فقط بدلًا من ثلاث سنوات. شمل المشروع إنشاء ممر ملاحي جديد بطول 35 كم
-                            وتوسيع وتعميق 37 كم من القناة الأصلية، مما قلل زمن انتظار السفن من 18 إلى 11 ساعة. ساهمت
-                            القناة الجديدة في زيادة عدد السفن العابرة ورفع الإيرادات من 5.3 مليار دولار عام 2014 إلى 9.4
-                            مليار دولار عام 2023. خلق المشروع أكثر من مليون فرصة عمل مباشرة وغير مباشرة، مما دعم
-                            الاقتصاد المحلي. أدى تطوير المنطقة الاقتصادية المحيطة بالقناة إلى جذب الاستثمارات العالمية
-                            وتعزيز القطاعات الصناعية واللوجستية. حسّن المشروع من كفاءة النقل البحري وخفض تكاليف الشحن
-                            الدولي، مما زاد من تنافسية القناة عالميًا. دعم ميزان المدفوعات المصري عبر تدفقات نقدية
-                            أجنبية متزايدة. عزز الاستدامة الاقتصادية من خلال تطوير البنية التحتية والموانئ الحديثة. جعل
-                            مصر وجهة استثمارية رئيسية للشركات العالمية. يمثل المشروع نموذجًا لنجاح المشروعات القومية
-                            الكبرى في دفع النمو الاقتصادي.
-                        </p>
-                        <a href="https://sites.google.com/view/misr-future/%D8%A7%D9%84%D9%85%D8%B4%D8%B1%D9%88%D8%B9%D8%A7%D8%AA-%D8%A7%D9%84%D9%82%D9%88%D9%85%D9%8A%D8%A9/%D9%82%D9%86%D8%A7%D8%A9-%D8%A7%D9%84%D8%B3%D9%88%D9%8A%D8%B3-%D8%A7%D9%84%D8%AC%D8%AF%D9%8A%D8%AF%D8%A9"
-                            class="btn">أقرأ المزيد</a>
+                    <p>
+                        قناة السويس الجديدة هي إنجاز استراتيجي يعزز مكانة مصر كمركز عالمي للتجارة، حيث تم تنفيذ
+                        المشروع في عام واحد فقط بدلًا من ثلاث سنوات. شمل المشروع إنشاء ممر ملاحي جديد بطول 35 كم
+                        وتوسيع وتعميق 37 كم من القناة الأصلية، مما قلل زمن انتظار السفن من 18 إلى 11 ساعة. ساهمت
+                        القناة الجديدة في زيادة عدد السفن العابرة ورفع الإيرادات من 5.3 مليار دولار عام 2014 إلى 9.4
+                        مليار دولار عام 2023. خلق المشروع أكثر من مليون فرصة عمل مباشرة وغير مباشرة، مما دعم
+                        الاقتصاد المحلي. أدى تطوير المنطقة الاقتصادية المحيطة بالقناة إلى جذب الاستثمارات العالمية
+                        وتعزيز القطاعات الصناعية واللوجستية. حسّن المشروع من كفاءة النقل البحري وخفض تكاليف الشحن
+                        الدولي، مما زاد من تنافسية القناة عالميًا. دعم ميزان المدفوعات المصري عبر تدفقات نقدية
+                        أجنبية متزايدة. عزز الاستدامة الاقتصادية من خلال تطوير البنية التحتية والموانئ الحديثة. جعل
+                        مصر وجهة استثمارية رئيسية للشركات العالمية. يمثل المشروع نموذجًا لنجاح المشروعات القومية
+                        الكبرى في دفع النمو الاقتصادي.
+                    </p>
+                    <a href="https://sites.google.com/view/misr-future/%D8%A7%D9%84%D9%85%D8%B4%D8%B1%D9%88%D8%B9%D8%A7%D8%AA-%D8%A7%D9%84%D9%82%D9%88%D9%85%D9%8A%D8%A9/%D9%82%D9%86%D8%A7%D8%A9-%D8%A7%D9%84%D8%B3%D9%88%D9%8A%D8%B3-%D8%A7%D9%84%D8%AC%D8%AF%D9%8A%D8%AF%D8%A9"
+                        class="btn">أقرأ المزيد</a>
                 </div>
                 <img src="./imgs/qnat_elsoas.jpg" alt="">
             </div>
@@ -165,6 +186,8 @@
                 <p>جميع الحقوق محفوظة لمسابقة نعم نسنطيع بوزارة التربية و التعليم 2024/2025</p>
         </div>
     </footer>
+
+    <script src="./main.js"></script>
 </body>
 
 </html>
