--- a/anfaq_elsoas.html
+++ b/anfaq_elsoas.html
@@ -5,7 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>مصر المستقبل</title>
+    <link rel="icon" type="image/x-icon" href="./imgs/favicon.png">
     <link rel="stylesheet" href="./style.css">
+    <style>
+        .sub_page section p{
+            margin: 0 auto;
+        }
+    </style>
 </head>
 
 <body>
