--- a/anfaq_elsoas.html
+++ b/anfaq_elsoas.html
@@ -17,17 +17,16 @@
 <body>
     <header>
         <div class="container">
-            <a href="#" class="title">
+            <a href="./" class="title">
                 <img src="./imgs/egypt_flag.webp" alt="">
                 <h1>مصر المستقبل</h1>
             </a>
             <ul class="nav desk_nav">
-                <li><a href="#way_to_change">الطريق للتغير</a></li>
-                <li><a href="#suez_canal_tunnels">أنفاق قناة السويس</a></li>
-                <li><a href="#new_administrative_capital" dir="ltr">العاصمة الأدارية الجديدة</a></li>
-                <li><a href="#new_alamein_city" dir="ltr">مدينة العلمين الجديدة</a></li>
-                <li><a href="#zohr_field" dir="ltr">حقل ظهر</a></li>
-                <li><a href="#new_suez_canal" dir="ltr">قناة السويس الجديدة</a></li>
+                <li><a href="./anfaq_elsoas.html">أنفاق قناة السويس</a></li>
+                <li><a href="./el3asma_eledarea.html" dir="ltr">العاصمة الأدارية الجديدة</a></li>
+                <li><a href="./el3alamen.html" dir="ltr">مدينة العلمين الجديدة</a></li>
+                <li><a href="./haql_zohr.html" dir="ltr">حقل ظهر</a></li>
+                <li><a href="./qnat_elsoas.html" dir="ltr">قناة السويس الجديدة</a></li>
             </ul>
             <div id="burger_menu">
                 <svg xmlns="http://www.w3.org/2000/svg" width="35px" height="35px" viewBox="0 0 24 24" fill="none">
@@ -42,12 +41,11 @@
                     <h4>مصر المستقبل</h4>
                 </a>
                 <ul class="nav">
-                    <li><a href="#way_to_change">الطريق للتغير</a></li>
-                    <li><a href="#suez_canal_tunnels">أنفاق قناة السويس</a></li>
-                    <li><a href="#new_administrative_capital" dir="ltr">العاصمة الأدارية الجديدة</a></li>
-                    <li><a href="#new_alamein_city" dir="ltr">مدينة العلمين الجديدة</a></li>
-                    <li><a href="#zohr_field" dir="ltr">حقل ظهر</a></li>
-                    <li><a href="#new_suez_canal" dir="ltr">قناة السويس الجديدة</a></li>
+                    <li><a href="./anfaq_elsoas.html">أنفاق قناة السويس</a></li>
+                    <li><a href="./el3asma_eledarea.html" dir="ltr">العاصمة الأدارية الجديدة</a></li>
+                    <li><a href="./el3alamen.html" dir="ltr">مدينة العلمين الجديدة</a></li>
+                    <li><a href="./haql_zohr.html" dir="ltr">حقل ظهر</a></li>
+                    <li><a href="./qnat_elsoas.html" dir="ltr">قناة السويس الجديدة</a></li>
                 </ul>
             </div>
         </div>
