--- a/haql_zohr.html
+++ b/haql_zohr.html
@@ -18,10 +18,11 @@
                 <h1>مصر المستقبل</h1>
             </a>
             <ul class="nav desk_nav">
+                <li><a href="./">الرئيسية</a></li>
                 <li><a href="./anfaq_elsoas.html">أنفاق قناة السويس</a></li>
                 <li><a href="./el3asma_eledarea.html" dir="ltr">العاصمة الأدارية الجديدة</a></li>
                 <li><a href="./el3alamen.html" dir="ltr">مدينة العلمين الجديدة</a></li>
-                <li><a href="./haql_zohr.html" dir="ltr">حقل ظهر</a></li>
+                <li><a href="./haql_zohr.html" class="active" dir="ltr">حقل ظهر</a></li>
                 <li><a href="./qnat_elsoas.html" dir="ltr">قناة السويس الجديدة</a></li>
             </ul>
             <div id="burger_menu">
@@ -37,10 +38,11 @@
                     <h4>مصر المستقبل</h4>
                 </a>
                 <ul class="nav">
+                    <li><a href="./">الرئيسية</a></li>
                     <li><a href="./anfaq_elsoas.html">أنفاق قناة السويس</a></li>
                     <li><a href="./el3asma_eledarea.html" dir="ltr">العاصمة الأدارية الجديدة</a></li>
                     <li><a href="./el3alamen.html" dir="ltr">مدينة العلمين الجديدة</a></li>
-                    <li><a href="./haql_zohr.html" dir="ltr">حقل ظهر</a></li>
+                    <li><a href="./haql_zohr.html" dir="ltr" class="active">حقل ظهر</a></li>
                     <li><a href="./qnat_elsoas.html" dir="ltr">قناة السويس الجديدة</a></li>
                 </ul>
             </div>
