--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <h1>مصر المستقبل</h1>
             </a>
             <ul class="nav desk_nav">
+                <li><a href="./" class="active">الرئيسية</a></li>
                 <li><a href="./anfaq_elsoas.html">أنفاق قناة السويس</a></li>
                 <li><a href="./el3asma_eledarea.html" dir="ltr">العاصمة الأدارية الجديدة</a></li>
                 <li><a href="./el3alamen.html" dir="ltr">مدينة العلمين الجديدة</a></li>
@@ -37,6 +38,7 @@
                     <h4>مصر المستقبل</h4>
                 </a>
                 <ul class="nav">
+                    <li><a href="./" class="active">الرئيسية</a></li>
                     <li><a href="./anfaq_elsoas.html">أنفاق قناة السويس</a></li>
                     <li><a href="./el3asma_eledarea.html" dir="ltr">العاصمة الأدارية الجديدة</a></li>
                     <li><a href="./el3alamen.html" dir="ltr">مدينة العلمين الجديدة</a></li>
