--- a/qnat_elsoas.html
+++ b/qnat_elsoas.html
@@ -23,11 +23,12 @@
                 <h1>مصر المستقبل</h1>
             </a>
             <ul class="nav desk_nav">
+                <li><a href="./">الرئيسية</a></li>
                 <li><a href="./anfaq_elsoas.html">أنفاق قناة السويس</a></li>
                 <li><a href="./el3asma_eledarea.html" dir="ltr">العاصمة الأدارية الجديدة</a></li>
                 <li><a href="./el3alamen.html" dir="ltr">مدينة العلمين الجديدة</a></li>
                 <li><a href="./haql_zohr.html" dir="ltr">حقل ظهر</a></li>
-                <li><a href="./qnat_elsoas.html" dir="ltr">قناة السويس الجديدة</a></li>
+                <li><a href="./qnat_elsoas.html" class="active" dir="ltr">قناة السويس الجديدة</a></li>
             </ul>
             <div id="burger_menu">
                 <svg xmlns="http://www.w3.org/2000/svg" width="35px" height="35px" viewBox="0 0 24 24" fill="none">
@@ -42,11 +43,12 @@
                     <h4>مصر المستقبل</h4>
                 </a>
                 <ul class="nav">
+                    <li><a href="./">الرئيسية</a></li>
                     <li><a href="./anfaq_elsoas.html">أنفاق قناة السويس</a></li>
                     <li><a href="./el3asma_eledarea.html" dir="ltr">العاصمة الأدارية الجديدة</a></li>
                     <li><a href="./el3alamen.html" dir="ltr">مدينة العلمين الجديدة</a></li>
                     <li><a href="./haql_zohr.html" dir="ltr">حقل ظهر</a></li>
-                    <li><a href="./qnat_elsoas.html" dir="ltr">قناة السويس الجديدة</a></li>
+                    <li><a href="./qnat_elsoas.html" dir="ltr" class="active">قناة السويس الجديدة</a></li>
                 </ul>
             </div>
         </div>
