--- a/anfaq_elsoas.html
+++ b/anfaq_elsoas.html
@@ -22,7 +22,8 @@
                 <h1>مصر المستقبل</h1>
             </a>
             <ul class="nav desk_nav">
-                <li><a href="./anfaq_elsoas.html">أنفاق قناة السويس</a></li>
+                <li><a href="./">الرئيسية</a></li>
+                <li><a href="./anfaq_elsoas.html" class="active">أنفاق قناة السويس</a></li>
                 <li><a href="./el3asma_eledarea.html" dir="ltr">العاصمة الأدارية الجديدة</a></li>
                 <li><a href="./el3alamen.html" dir="ltr">مدينة العلمين الجديدة</a></li>
                 <li><a href="./haql_zohr.html" dir="ltr">حقل ظهر</a></li>
@@ -41,7 +42,8 @@
                     <h4>مصر المستقبل</h4>
                 </a>
                 <ul class="nav">
-                    <li><a href="./anfaq_elsoas.html">أنفاق قناة السويس</a></li>
+                    <li><a href="./">الرئيسية</a></li>
+                    <li><a href="./anfaq_elsoas.html" class="active">أنفاق قناة السويس</a></li>
                     <li><a href="./el3asma_eledarea.html" dir="ltr">العاصمة الأدارية الجديدة</a></li>
                     <li><a href="./el3alamen.html" dir="ltr">مدينة العلمين الجديدة</a></li>
                     <li><a href="./haql_zohr.html" dir="ltr">حقل ظهر</a></li>
