--- a/el3alamen.html
+++ b/el3alamen.html
@@ -17,9 +17,10 @@
                 <h1>مصر المستقبل</h1>
             </a>
             <ul class="nav desk_nav">
+                <li><a href="./">الرئيسية</a></li>
                 <li><a href="./anfaq_elsoas.html">أنفاق قناة السويس</a></li>
                 <li><a href="./el3asma_eledarea.html" dir="ltr">العاصمة الأدارية الجديدة</a></li>
-                <li><a href="./el3alamen.html" dir="ltr">مدينة العلمين الجديدة</a></li>
+                <li><a href="./el3alamen.html" class="active" dir="ltr">مدينة العلمين الجديدة</a></li>
                 <li><a href="./haql_zohr.html" dir="ltr">حقل ظهر</a></li>
                 <li><a href="./qnat_elsoas.html" dir="ltr">قناة السويس الجديدة</a></li>
             </ul>
@@ -36,9 +37,10 @@
                     <h4>مصر المستقبل</h4>
                 </a>
                 <ul class="nav">
+                    <li><a href="./">الرئيسية</a></li>
                     <li><a href="./anfaq_elsoas.html">أنفاق قناة السويس</a></li>
                     <li><a href="./el3asma_eledarea.html" dir="ltr">العاصمة الأدارية الجديدة</a></li>
-                    <li><a href="./el3alamen.html" dir="ltr">مدينة العلمين الجديدة</a></li>
+                    <li><a href="./el3alamen.html" dir="ltr" class="active">مدينة العلمين الجديدة</a></li>
                     <li><a href="./haql_zohr.html" dir="ltr">حقل ظهر</a></li>
                     <li><a href="./qnat_elsoas.html" dir="ltr">قناة السويس الجديدة</a></li>
                 </ul>
@@ -726,7 +728,7 @@
                                             <div class="jXK9ad-SmKAyb">
                                                 <div class="tyJCtd OWlOyc baZpAe">
                                                     <div jscontroller="VYKRW" jsaction="rcuQ6b:rcuQ6b;">
-                                                        <div class="WIdY2d M1aSXe"
+                                                        <div class="WIdY2d M1aSXe" style="display: flex;justify-content: center;"
                                                             data-embed-doc-id="1mpKdo-5NQrcYVFBMHbZ-eK5IIHcmwb8W"
                                                             data-embed-open-url="https://drive.google.com/open?authuser=0&amp;id=1mpKdo-5NQrcYVFBMHbZ-eK5IIHcmwb8W"
                                                             data-embed-thumbnail-url="https://drive.google.com/thumbnail?authuser=0&amp;id=1mpKdo-5NQrcYVFBMHbZ-eK5IIHcmwb8W&amp;sz=w1469-h729-p-k-nu"
