--- a/el3asma_eledarea.html
+++ b/el3asma_eledarea.html
@@ -23,6 +23,7 @@
                 <li><a href="./el3alamen.html" dir="ltr">مدينة العلمين الجديدة</a></li>
                 <li><a href="./haql_zohr.html" dir="ltr">حقل ظهر</a></li>
                 <li><a href="./qnat_elsoas.html" dir="ltr">قناة السويس الجديدة</a></li>
+                <li><a href="./elerhab.html" dir="ltr">مكافحة الإرهاب</a></li>
             </ul>
             <div id="burger_menu">
                 <svg xmlns="http://www.w3.org/2000/svg" width="35px" height="35px" viewBox="0 0 24 24" fill="none">
@@ -43,6 +44,7 @@
                     <li><a href="./el3alamen.html" dir="ltr">مدينة العلمين الجديدة</a></li>
                     <li><a href="./haql_zohr.html" dir="ltr">حقل ظهر</a></li>
                     <li><a href="./qnat_elsoas.html" dir="ltr">قناة السويس الجديدة</a></li>
+                    <li><a href="./elerhab.html" dir="ltr">مكافحة الإرهاب</a></li>
                 </ul>
             </div>
         </div>
