--- a/qnat_elsoas.html
+++ b/qnat_elsoas.html
@@ -29,6 +29,7 @@
                 <li><a href="./el3alamen.html" dir="ltr">مدينة العلمين الجديدة</a></li>
                 <li><a href="./haql_zohr.html" dir="ltr">حقل ظهر</a></li>
                 <li><a href="./qnat_elsoas.html" class="active" dir="ltr">قناة السويس الجديدة</a></li>
+                <li><a href="./elerhab.html" dir="ltr">مكافحة الإرهاب</a></li>
             </ul>
             <div id="burger_menu">
                 <svg xmlns="http://www.w3.org/2000/svg" width="35px" height="35px" viewBox="0 0 24 24" fill="none">
@@ -49,6 +50,7 @@
                     <li><a href="./el3alamen.html" dir="ltr">مدينة العلمين الجديدة</a></li>
                     <li><a href="./haql_zohr.html" dir="ltr">حقل ظهر</a></li>
                     <li><a href="./qnat_elsoas.html" dir="ltr" class="active">قناة السويس الجديدة</a></li>
+                    <li><a href="./elerhab.html" dir="ltr">مكافحة الإرهاب</a></li>
                 </ul>
             </div>
         </div>
