--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         والمراقبة. أسهمت الأنفاق في دعم التنمية الصناعية والتجارية بسيناء، وتعزيز حركة البضائع
                         والتجارة بين شرق وغرب القناة. كما ساعدت في جذب الاستثمارات وتحقيق طفرة في قطاع النقل
                         واللوجستيات. إلى جانب دورها الاقتصادي.</p>
-                    <a href="https://sites.google.com/view/misr-future/%D8%A7%D9%84%D9%85%D8%B4%D8%B1%D9%88%D8%B9%D8%A7%D8%AA-%D8%A7%D9%84%D9%82%D9%88%D9%85%D9%8A%D8%A9/%D8%A3%D9%86%D9%81%D8%A7%D9%82-%D9%82%D9%86%D8%A7%D8%A9-%D8%A7%D9%84%D8%B3%D9%88%D9%8A%D8%B3"
+                    <a href="./anfaq_elsoas.html"
                         class="btn">أقرأ المزيد</a>
                 </div>
                 <img src="./imgs/أنفاق-قناة-السويس.jpg" alt="">
@@ -105,7 +105,7 @@
                         الحياة. تضم جامعات دولية ومستشفيات متطورة بمعايير عالمية. تحقق عوائد اقتصادية ضخمة من بيع
                         الأراضي والمشروعات التجارية. تعكس رؤية مصر نحو مستقبل حديث ومتطور عالميًا.
                     </p>
-                    <a href="https://sites.google.com/view/misr-future/%D8%A7%D9%84%D9%85%D8%B4%D8%B1%D9%88%D8%B9%D8%A7%D8%AA-%D8%A7%D9%84%D9%82%D9%88%D9%85%D9%8A%D8%A9/%D8%A7%D9%84%D8%B9%D8%A7%D8%B5%D9%85%D8%A9-%D8%A7%D9%84%D8%A5%D8%AF%D8%A7%D8%B1%D9%8A%D8%A9-%D8%A7%D9%84%D8%AC%D8%AF%D9%8A%D8%AF%D8%A9"
+                    <a href="./el3asma_eledarea.html"
                         class="btn">أقرأ المزيد</a>
                 </div>
                 <img src="./imgs/3asma.jpg" alt="">
@@ -129,7 +129,7 @@
                         وتحقيق توزيع عمراني متوازن. تعد نموذجًا لمدن الجيل الرابع الذكية، مما يعزز مكانة مصر
                         عالميًا.
                     </p>
-                    <a href="https://sites.google.com/view/misr-future/%D8%A7%D9%84%D9%85%D8%B4%D8%B1%D9%88%D8%B9%D8%A7%D8%AA-%D8%A7%D9%84%D9%82%D9%88%D9%85%D9%8A%D8%A9/%D9%85%D8%AF%D9%8A%D9%86%D8%A9-%D8%A7%D9%84%D8%B9%D9%84%D9%85%D9%8A%D9%86-%D8%A7%D9%84%D8%AC%D8%AF%D9%8A%D8%AF%D8%A9"
+                    <a href="./el3alamen.html"
                         class="btn">أقرأ المزيد</a>
                 </div>
                 <img src="./imgs/3lamen.jpg" alt="">
@@ -153,7 +153,7 @@
                         الاستقرار الاقتصادي. يمثل حقل ظهر إنجازًا استراتيجيًا يعكس رؤية مصر لتحقيق التنمية المستدامة
                         والاستقلالية الاقتصادية.
                     </p>
-                    <a href="https://sites.google.com/view/misr-future/%D8%A7%D9%84%D9%85%D8%B4%D8%B1%D9%88%D8%B9%D8%A7%D8%AA-%D8%A7%D9%84%D9%82%D9%88%D9%85%D9%8A%D8%A9/%D8%AD%D9%82%D9%84-%D8%B8%D9%87%D8%B1"
+                    <a href="./haql_zohr.html"
                         class="btn">أقرأ المزيد</a>
                 </div>
                 <img src="./imgs/haql_zohr.webp" alt="">
@@ -177,10 +177,30 @@
                         مصر وجهة استثمارية رئيسية للشركات العالمية. يمثل المشروع نموذجًا لنجاح المشروعات القومية
                         الكبرى في دفع النمو الاقتصادي.
                     </p>
-                    <a href="https://sites.google.com/view/misr-future/%D8%A7%D9%84%D9%85%D8%B4%D8%B1%D9%88%D8%B9%D8%A7%D8%AA-%D8%A7%D9%84%D9%82%D9%88%D9%85%D9%8A%D8%A9/%D9%82%D9%86%D8%A7%D8%A9-%D8%A7%D9%84%D8%B3%D9%88%D9%8A%D8%B3-%D8%A7%D9%84%D8%AC%D8%AF%D9%8A%D8%AF%D8%A9"
+                    <a href="./qnat_elsoas.html"
                         class="btn">أقرأ المزيد</a>
                 </div>
                 <img src="./imgs/qnat_elsoas.jpg" alt="">
+            </div>
+        </section>
+
+        <section id="elerhab">
+            <div class="container">
+                <div class="text">
+                    <h1>مكافحة الإرهاب</h1>
+                    <p>
+                        تمثل مكافحة الإرهاب أولوية استراتيجية لمصر، حيث نجحت الحكومة والجيش في تحقيق إنجازات بارزة بفضل
+                        العمليات العسكرية والاستخباراتية، خاصة في شمال سيناء. تبنت الدولة خططًا تنموية لمواجهة التطرف
+                        وتعزيز الاستقرار. من أبرز الشهداء العقيد أحمد منسي، قائد الكتيبة 103 صاعقة، الذي استشهد في هجوم
+                        إرهابي عام 2017، وكرمته الدولة بإطلاق اسمه على أحد الكباري. كما استشهد المجند أبانوب جاب الله في
+                        هجوم الشيخ زويد عام 2015، وأطلق اسمه على كوبري القنطرة. أنقذ الشهيد محمد شويقة زملاءه باحتضانه
+                        إرهابيًا يحمل حزامًا ناسفًا. كذلك، استشهد المقدم محمد حبشي في اشتباكات مع إرهابيين بالواحات
+                        البحرية، حيث كان ضمن مأمورية أمنية لمكافحة الإرهاب.
+                    </p>
+                    <a href="./elerhab.html"
+                        class="btn">أقرأ المزيد</a>
+                </div>
+                <img src="./imgs/elerhab.jpg" alt="">
             </div>
         </section>
     </main>
