--- a/anfaq_elsoas.html
+++ b/anfaq_elsoas.html
@@ -198,7 +198,12 @@
                         أعلى مستويات الأمان للمركبات والمواطنين.
                     </p>
                 </div>
-                <img src="./imgs/anfaq_elsoas_2.jpeg" alt="">
+                
+                <div class="imgs">
+                    <img src="./imgs/anfaq_elsoas_2.jpeg" alt="">
+                    <img src="./imgs/310.webp" alt="">
+                    <img src="./imgs/ismalia_anfaq.jpg" alt="">
+                </div>
             </div>
         </section>
         <section>
