--- a/el3alamen.html
+++ b/el3alamen.html
@@ -184,7 +184,15 @@
 
                     </div>
                 </div>
-                <img src="./imgs/معلومات-عن-مدينة-العلمين-الجديدة.jpg" alt="">
+                
+                <div class="imgs">
+                    <img src="./imgs/معلومات-عن-مدينة-العلمين-الجديدة.jpg" alt="">
+                    <img src="./imgs/عيوب-ومميزات-مدينة-العلمين-الجديدة.webp" alt="">
+                    <img src="./imgs/3lamen_madena.jpg" alt="">
+                    <img src="./imgs/3asema_lateni.jpg" alt="">
+                    <img src="./imgs/hospitals_3asema.jpg" alt="">
+                    
+                </div>
             </div>
         </section>
         <section>
