--- a/el3asma_eledarea.html
+++ b/el3asma_eledarea.html
@@ -186,7 +186,14 @@
                         </p>
                     </div>
                 </div>
-                <img src="./imgs/مميزات-وعيوب-العاصمة-الإدارية.webp" alt="">
+                
+                <div class="imgs">
+                    <img src="./imgs/مميزات-وعيوب-العاصمة-الإدارية.webp" alt="">
+                    <img src="./imgs/17515124781603957407.jpg" alt="">
+                    <img src="./imgs/202207121229292929.jpg" alt="">
+                    <img src="./imgs/Noor-most-used-scaled.jpg" alt="">
+                    <img src="./imgs/أين-تقع-العاصمة-الإدارية-الجديدة-1024x676.webp" alt="">
+                </div>
             </div>
         </section>
         <section>
