--- a/haql_zohr.html
+++ b/haql_zohr.html
@@ -154,7 +154,12 @@
                     </div>
                 </div>
                 
-                <img src="./imgs/F2Nkfj0WYAA6g2A.jpg" alt="">
+                
+                <div class="imgs">
+                    <img src="./imgs/F2Nkfj0WYAA6g2A.jpg" alt="">
+                    <img src="./imgs/936.webp" alt="">
+                    <img src="./imgs/zohr_beneatahtea.jpg" alt="">
+                </div>
             </div>
         </section>
         <section>
