--- a/qnat_elsoas.html
+++ b/qnat_elsoas.html
@@ -173,7 +173,14 @@
                     </div>
                     
                 </div>
-                <img src="./imgs/6-8-2015-1-jpg.webp" alt="">
+                <div class="imgs">
+                    <img src="./imgs/6-8-2015-1-jpg.webp" alt="">
+                    <img src="./imgs/1-1776251.webp" alt="">
+                    <img src="./imgs/qnat_gedea_ta3zez.jpg" alt="">
+                    <img src="./imgs/qnat_melaha.jpg" alt="">
+                    <img src="./imgs/qnat_enshaq.jpg" alt="">
+                </div>
+                
             </div>
         </section>
         <section>
