--- a/anfaq_elsoas.html
+++ b/anfaq_elsoas.html
@@ -65,7 +65,7 @@
                 <div class="IFuOkc"></div>
                 <div class="mYVXT">
                     <div class="LS81yb VICjCf j5pSsc db35Fc" tabindex="-1">
-                        <div
+                        <!-- <div
                             class="hJDwNd-AhqUyc-qWD73c Ft7HRd-AhqUyc-qWD73c purZT-AhqUyc-II5mzb ZcASvf-AhqUyc-II5mzb pSzOP-AhqUyc-qWD73c Ktthjf-AhqUyc-qWD73c JNdkSc SQVYQc">
                             <div class="JNdkSc-SmKAyb LkDMRd">
                                 <div class="" jscontroller="sGwD4d" jsaction="zXBUYb:zTPCnb;zQF9Uc:Qxe3nd;"
@@ -110,7 +110,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div
                             class="hJDwNd-AhqUyc-qWD73c Ft7HRd-AhqUyc-qWD73c purZT-AhqUyc-II5mzb ZcASvf-AhqUyc-II5mzb pSzOP-AhqUyc-qWD73c Ktthjf-AhqUyc-qWD73c JNdkSc SQVYQc">
                             <div class="JNdkSc-SmKAyb LkDMRd">
