--- a/elerhab.html
+++ b/elerhab.html
@@ -27,6 +27,10 @@
                 display: flex;
                 justify-content: center;
             }
+
+            #the_video{
+                width: 350px !important;
+            }
         }
 
         section:not(.pref) p {
@@ -139,6 +143,8 @@
                                                             الإرهابية، بهدف القضاء على البيئة الحاضنة للتطرف وتعزيز
                                                             الاستقرار الاجتماعي.</span>
                                                     </p>
+
+                                                    <video src="./imgs/1.mp4" controls="" id="the_video" class="VPY_from_APL1" style="width: 400px; margin: 0 auto; display: block;"></video>
                                                     <p dir="ltr" class="zfr3Q CDt4Ke"
                                                         style="background-color: transparent; border-bottom: none; border-left: none; border-right: none; border-top: none; line-height: 1.38; margin-bottom: 12.0pt; margin-top: 12.0pt; padding-bottom: 0.0pt; padding-left: 0.0pt; padding-right: 0.0pt; padding-top: 0.0pt; text-align: center;">
                                                         <span class="C9DxTc"
