--- a/elerhab.html
+++ b/elerhab.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مصر المستقبل</title>
+    <title>مصر المستقبل | مكافحة الإرهاب</title>
     <link rel="icon" type="image/x-icon" href="./imgs/favicon.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
     <link rel="stylesheet" href="./style.css">
