--- a/anfaq_elsoas.html
+++ b/anfaq_elsoas.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>مصر المستقبل | أنفاق قناة السويس</title>
     <link rel="icon" type="image/x-icon" href="./imgs/favicon.png">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" media="(min-width: 768px)" />
     <link rel="stylesheet" href="./style.css">
 </head>
 
