--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>مصر المستقبل</title>
     <link rel="icon" type="image/x-icon" href="./imgs/favicon.png">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" media="(min-width: 768px)" />
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <div class="pre_loader">
+    <!-- <div class="pre_loader">
         <img src="./imgs/Egypt-xs.gif" alt="">
-    </div>
+    </div> -->
     <header>
         <div class="container">
             <a href="./" class="title">
