--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-    <!-- <div class="pre_loader">
+    <div class="pre_loader">
         <img src="./imgs/Egypt-xs.gif" alt="">
-    </div> -->
+    </div>
     <header>
         <div class="container">
             <a href="./" class="title">
